# chess-tactics

./: .gitignore  .pre-commit-config.yaml  LICENSE  NEWS.rst  README.rst  pyproject.toml  tox.ini
chess_tactics/: attacks.py  exchange.py  lichess_game.py  mistakes.py  move_utils.py  tactics.py  utils.py  values.py
tests/: _lichess_games.py  conftest.py  fens.py  test_attacks.py  test_exchange.py  test_lichess.py  test_mistakes.py  test_tactics.py  test_tactics_hanging.py  test_values.py
